/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package juegos.apex;
import juegos.*;
/**
 *
 * @author Weriko
 */
public class ApexPC implements IJuego, IApex{
    public String jugar(){
        return "En apex mi equipo es muy malo, pero estoy en pc";
    }
    public String disparar(){
        return "Pium pum";
    }
    
}
