/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package juegos.apex;

/**
 *
 * @author Weriko
 */
public interface IApex {
    public String disparar();
       
    
    
}
